# CFD-Project

./: Expressions.py  INTAKE3D.msh  INTAKE3D.step  README.md  blank.mod  constants.mod  expressions.exp  inlet.dbg  inlet.fig  inlet.out  inletprocedures.mod  output.msh  output.su2  workflow_utils.py
Garage/: .gitignore  INTAKE3D.msh  INTAKE3D.step  README.md  __init__.py  cfd_solver  diagnose.py  enhanced_diagnose.py  error_log.txt  expressions.exp  fix_hpc_tab.py  fix_hpc_tab_v2.py  launch_gui.py  main.md  main.py  requirements.txt  run_gui.py  settings.json  setup_hpc_config.py  setup_hpc_tab.py  setup_wsl_display.sh  simple_gui.py  test_display_settings.py  test_gui.py  view_benchmark_results.py
Garage/CFD/: __init__.py  cfd_batch.py  cfd_gui_helpers.py  cfd_runner.py  cfd_visualizer.py  mesh_tools.py
Garage/Config/: __init__.py  hpc_profiles.json  hpc_settings.json  naca_boundary_layer_3d.msh.opt  optimization_history.sql  requirements.txt  settings.json  system_info.txt
Garage/Config/presets/: default.json
Garage/Core/: __init__.py  emergency_mesher.py  main.f90  main_wrapper.f90  mesh_refiner.py  mesh_validator.py  python_chunked_mesher.py  python_domain_creator.py  python_mesher.py  string_utils.f90
Garage/Docs/: Doxyfile  generate_docs.sh  mainpage.md
Garage/GMSH/: INTAKE3D.geo  INTAKE3D.msh  gmsh_interface.f90  gmsh_process.cpp  gmsh_process.f90  gmsh_process.py  mesh.msh  output.msh  rebuild_gmsh.sh  simple_mesh.msh
Garage/GUI/: Launch_GUI.bat  __init__.py  display_utils.py  fix_and_launch_gui.sh  fix_hpc_gui.py  fix_hpc_gui.py.bak  fix_wsl_gui.sh  gui_diagnostics.py  gui_error_handler.py  gui_fix.py  gui_helper.py  gui_repair.py  launch_cfd_gui.py  launch_gui.py  launch_gui_app.sh  launch_gui_wsl.sh  run_direct.py  run_fixed_gui.py  run_gui.sh  run_gui_wsl.sh  simple_gui_test.py  test_gui.py  test_gui_basic.py  test_gui_comprehensive.py  test_gui_direct.py  test_gui_minimal.py  test_gui_modes.py  test_gui_modes_wrapper.py  wsl_gui_fix.py
Garage/GUI/config/: hpc_settings.json
Garage/GUI/gui/: __init__.py  workflow_gui.py
Garage/HPC/: HPCManager.py  __init__.py  fix_hpc_structure.py  hpc_config_dialog.py  hpc_connector.py  hpc_helpers.py  hpc_integration.py  hpc_job_templates.py  hpc_utils.py  setup_hpc.py
Garage/MDO/: MDO.py  __init__.py  doe.py  hpc_doe_runner.py  hpc_optimizer.py  multi_objective.py  neural_networks.py  optimizer.py  surrogate_model.py  workflow_gui.py
Garage/Models/: __init__.py  expressions.exp  mesh.su2  output.su2  simple_mesh.su2
Garage/NX/: INTAKE3D.step  INTAKE3D_repaired.stp  nx_express.py  nx_express2.py
Garage/Unit Tests/: MDO.py  display_utils.py  run_display_settings.py  run_hpc_tests.py  test.cu  test_cuda  test_display_settings.py  test_display_settings_helper.py  test_hpc_advanced.py  test_hpc_workflow.py  test_patched_gui.py  test_refinement.cpp  workflow_utils.py
Garage/Unit Tests/Tests/: benchmark_tests.py  run_tests.sh  test_geometry.cpp  test_openmp.cpp
Garage/Unit Tests/cmake/: FindCUDA.cmake  FindNVHPC.cmake
Garage/Unit Tests/code_quality/: codefix.py  syntax_checker.py
Garage/Unit Tests/python/: test_display_utils.py  test_nxopen.py
Garage/Unit Tests/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  build.sh  build_env.sh  test_parallel.cu
Garage/Unit Tests/test/cmake/: FindGmsh.cmake
Garage/Unit Tests/test/test/: CTestTestfile.cmake  cmake_install.cmake
Garage/Unit Tests/test_data/: reference_mesh.msh  (+3 more)
Garage/Utils/: __init__.py  bc_manager.py  build.sh  command_log.txt  compile_fortran.sh  convert_geometry.sh  create_fluid_domain.sh  direct_mesh.sh  error_log.txt  export_mesh.sh  fix_patch_syntax.py  fix_permissions.sh  fix_test_geometry.py  install_gpu_deps.sh  make_scripts_executable.sh  mesh_intake3d.sh  mesh_with_lower_memory.sh  organize.sh  patch.py  prepare_for_cfd.sh  run_display_tests.sh  run_gmsh_process.sh  run_hpc_tests.sh  run_nx_commands.sh  run_tests.sh  run_windows.bat  run_with_bypass.bat  safe_mesh_process.sh  setup_environment.sh  test_cuda.sh  try_all_methods.sh  win_launch.ps1  workflow_utils.py  workflow_utils_backup.py  wrapper_script.bat
Garage/hpc_connector/: __init__.py
Garage/web-ui/: INTAKE3D.msh  INTAKE3D.step  README.md  app.py  core.py  gmsh_process  gui.py  hpc_manager.py  minimal_app.py  optimization_manager.py  optimize.py  package-lock.json  package.json  process_results  requirements.txt  run.sh  settings_manager.py  simple_app.py  simple_install.sh  test_reactpy.py  visualization_manager.py  workflow_manager.py
fluent_case/: intake.msh  setup.jou
nx/: CMakeLists.txt  Expressions.py  INTAKE3D.prt  INTAKE3D.stp  INTAKE3D_repaired.msh  INTAKE3D_repaired.stp  MDO.py  Makefile  README.md  absolute_last_resort.sh  build_main.sh  build_wrapper.sh  configure_gmsh.sh  cuda_diagnostics.sh  cuda_kernels.cu  expression.exp  expressions.exp  expressions.txt.exp  extreme_mesh.sh  gmsh_interface.f90  gmsh_interface.mod  gmsh_process  gmsh_process copy.py  gmsh_process.f90  gmsh_process.mod  gmsh_process.py  gmsh_processor  gpu_env_setup.sh  main.cpp  main_wrapper.f90  mesh_generator  mesh_intake.sh  nx_command.py  nx_export.py  nx_express2.py  output.msh  output.msh.opt  repair_step.sh  run_nx_commands.sh  run_tests.sh  (+20 more)
nx/build_main/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  gmsh_processor  mesh_generator
nx/build_main/test/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  test_openmp
nx/cmake/: CUDAPolicy.cmake  FindGmsh.cmake
nx/src/: gmsh_nx.cpp  main.cpp
nx/test/: CMakeCache.txt  cmake_install.cmake  test_complex_mesh.cpp  test_initialize.cpp  test_logger.cpp  test_mesh.cpp  test_model.cpp  test_operations.cpp  test_parallel.cpp  test_refinement.cpp  test_step_reader.cpp
nx/test/test/: Makefile
nx/tests/: test_run_nx_commands.sh
openfoam_case/: Allrun  run.sh  view.sh
openfoam_case/0/: U  epsilon  k  nut  p
openfoam_case/constant/: transportProperties  turbulenceProperties
openfoam_case/system/: controlDict  foamConvertOptions  fvSchemes  fvSolution
(+38 files in other folders)
